--- a/src/main/java/Frontend/Notas/edit-note.hbs
+++ b/src/main/java/Frontend/Notas/edit-note.hbs
@@ -10,26 +10,26 @@
 <div class="col-md-4 mx-auto">
   <div class="card">
     <div class="card-header text-center">
-      <h3>Edit Note</h3>
+      <h3>Editar Nota</h3>
     </div>
     <div class="card-body">
-      <form action="/notas/actualizar/{{nota.id}}?_method=PUT" method="POST">
+      <form action="/notes/edit-note/{{nota.id}}?_method=PUT" method="POST">
         <input type="hidden" name="_method" value="PUT" />
         <div class="mb-3">
-          <label for="title">Title:</label>
+          <label for="title">Titulo:</label>
           <input
             type="text"
             name="title"
             class="form-control"
-            value="{{nota.titulo}}"
+            value="{{nota.title}}"
           />
         </div>
         <div class="mb-3">
-          <label for="description">Description:</label>
+          <label for="description">Descripcion:</label>
           <textarea
             name="description"
             class="form-control"
-          >{{nota.contenido}}</textarea>
+          >{{note.contenido}}</textarea>
         </div>
         <button class="btn btn-primary w-100" type="submit">
           Save
