--- a/src/main/java/Frontend/Notas/new-note.hbs
+++ b/src/main/java/Frontend/Notas/new-note.hbs
@@ -1,12 +1,12 @@
 <div class="col-md-4 mx-auto">
   <div class="card">
     <div class="card-header bg-dark text-center">
-      <h3 class="text-white">New Note</h3>
+      <h3 class="text-white">Nueva Notae</h3>
     </div>
     <div class="card-body text-right">
-      <form action="/notas/nueva" method="POST">
+      <form action="/notes/new-note" method="POST">
         <div class="mb-3">
-          <label for="title">Title:</label>
+          <label for="title">Titulo:</label>
           <input
             type="text"
             name="title"
