Optimizaciones de seguridad

--- a/src/main/frontend/frontend/src/app/app.component.html
+++ b/src/main/frontend/frontend/src/app/app.component.html
@@ -61,7 +61,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="page-content container note-has-grid">
   <ul class="nav nav-pills p-3 bg-white mb-3 rounded-pill align-items-center">
-    <button class="nav-item nav-link rounded-pill note-link d-flex align-items-center px-2 px-md-3 mr-0 mr-md-2 active" id="all-category" (click)="showNotes()">
+    <button class="nav-item nav-link rounded-pill note-link d-flex align-items-center px-2 px-md-3 mr-0 mr-md-2 active" id="all-category">
       <i class="icon-layers mr-1"></i><span class="d-none d-md-block">All Notes</span>
     </button>
     <li class="nav-item ml-auto">
