--- a/src/main/frontend/frontend/src/app/general/note/note.component.html
+++ b/src/main/frontend/frontend/src/app/general/note/note.component.html
@@ -3,10 +3,11 @@
   <h5 class="note-title text-truncate w-75 mb-0" [textContent]="note.title"></h5>
   <p class="note-date font-12 text-muted">{{ note.date }}</p>
   <div class="note-content">
-    <p class="note-inner-content text-muted" [textContent]="note.content"></p>
+    <p class="note-inner-content text-muted">{{note.content}}</p>
   </div>
   <div class="d-flex align-items-center">
-    <span class="mr-1"><i class="fa fa-trash remove-note"></i></span>
+    <button class="mr-1" (click)="updateNote(note.id)"><i class="fa fa-edit edit-note" style="color: black;" ></i></button>
+    <button class="mr-1" (click)="deleteNote(note.id)"><i class="fa fa-trash remove-note" style="color: black;"></i></button>
     <div class="ml-auto">
     </div>
   </div>
