--- a/src/main/frontend/frontend/src/app/app.component.html
+++ b/src/main/frontend/frontend/src/app/app.component.html
@@ -9,18 +9,17 @@
   </style>
 </head>
 <body>
+
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-<div class="page-content container note-has-grid">
-  <ul class="nav nav-pills p-3 bg-white mb-3 rounded-pill align-items-center">
-    <button class="nav-item nav-link rounded-pill note-link d-flex align-items-center px-2 px-md-3 mr-0 mr-md-2 active">
-      <i class="icon-layers mr-1"></i><span class="d-none d-md-block">All Notes</span>
+<div class="container">
+  <ul class="nav-pills p-3 bg-white col-mb-3 rounded-pill">
+    <button class="nav-link rounded-pill d-flex px-2 px-md-3 mr-0 mr-md-2 active">
+      <i class="icon-layers mr-1"></i><span class="d-none d-md-block">Add Note</span>
     </button>
-    <li class="nav-item ml-auto">
-      <a href="javascript:void(0)" class="nav-link btn-primary rounded-pill d-flex align-items-center px-3" id="add-notes"> <i class="icon-note m-1"></i><span class="d-none d-md-block font-14">Add Notes</span></a>
-    </li>
   </ul>
-      <div class="col-md-4">
+  <div class="col-md-4 mb-4">
         <app-note></app-note>
         </div>
-  </div>
+      </div>
 </body>
+
