--- a/src/main/frontend/frontend/src/app/confirm-delete/confirm-delete.component.html
+++ b/src/main/frontend/frontend/src/app/confirm-delete/confirm-delete.component.html
@@ -1,15 +1,13 @@
-<mat-dialog-content>
-  <div
-    class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2"
-  ></div>
-  <h1 mat-dialog-title>Are you sure you want to delete this note?</h1>
-  <div mat-dialog-content>
-    <p class="text-center">This is IRREVERSIBLE</p>
+<span style="display: inline-flexbox" >
+<div class="d-flex align-items-center justify-content-center">
+  <div class="text-center">
+      <h2 class="mb-3 mt-3">Are you sure you want to delete the note?</h2>
+      <h5>This is IRREVERSIBLE</h5>
+      <div class="d-flex justify-content-center mt-3 mb-3 ml-0 mr-0">
+          <button class="btn btn-secondary mr-2" [mat-dialog-close]="true">CANCEL</button>
+          <button class="btn btn-danger" (click)="onDeleteClick()">DELETE</button>
+      </div>
   </div>
-  <div class="flex justify-between items-center">
-    <button mat-button [mat-dialog-close]="true">CANCEL</button>
-    <button mat-button class="btn btn-danger text-rose-500 border-2 px-2 py-2" (click)="onDeleteClick()">
-      DELETE
-    </button>
-  </div>
-</mat-dialog-content>
+</div>
+</span>
+
