--- a/src/main/frontend/frontend/src/app/general/note/note.component.html
+++ b/src/main/frontend/frontend/src/app/general/note/note.component.html
@@ -1,14 +1,18 @@
-<div *ngFor="let note of notesArray" class="card card-body">
-  <span class="side-stick"></span>
-  <h5 class="note-title text-truncate w-75 mb-0">{{note.title}}</h5>
-  <p class="note-date font-12 text-muted">{{note.date}}</p>
-  <div class="note-content">
-    <p class="note-inner-content text-muted">{{note.content}}</p>
-  </div>
-  <div class="d-flex align-items-center">
-    <button class="mr-1" (click)="updateNote(note.id)"><i class="fa fa-edit edit-note" style="color: black;" ></i></button>
-    <button class="mr-1" (click)="deleteNote(note.id)"><i class="fa fa-trash remove-note" style="color: black;"></i></button>
-    <div class="ml-auto">
+<div style="display: inline-flex; flex-direction: row;">
+  <div *ngFor="let note of notesArray" class="card card-body" style="margin-right: 5px; width: 200px; position: relative;">
+    <span class="side-stick"></span>
+    <h5 class="note-title text-truncate w-75 mb-0">{{note.title}}</h5>
+    <p class="note-date font-12 text-muted">{{note.date}}</p>
+    <div class="note-content">
+      <p class="note-inner-content text-muted">{{note.content}}</p>
+    </div>
+    <div class="d-flex align-items-center" style="position: absolute; bottom: 10px; right: 10px;">
+      <button class="mr-1" (click)="updateNote(note.id)"><i class="fa fa-edit edit-note" style="color: black; margin-right: 5px;"></i></button>
+      <button class="mr-1" (click)="deleteNote(note.id)"><i class="fa fa-trash remove-note" style="color: black; margin-right: 5px;"></i></button>
+      <div class="ml-auto"></div>
     </div>
   </div>
 </div>
+
+
+
