--- a/src/main/frontend/frontend/src/app/app.component.html
+++ b/src/main/frontend/frontend/src/app/app.component.html
@@ -13,7 +13,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="container">
   <ul class="nav-pills p-3 bg-white col-mb-3 rounded-pill">
-    <button class="nav-link rounded-pill d-flex px-2 px-md-3 mr-0 mr-md-2 active">
+    <button class="nav-link rounded-pill d-flex px-2 px-md-3 mr-0 mr-md-2 active" (click)="openForm()">
       <i class="icon-layers mr-1"></i><span class="d-none d-md-block">Add Note</span>
     </button>
   </ul>
