--- a/src/main/frontend/frontend/src/app/general/note/note.component.html
+++ b/src/main/frontend/frontend/src/app/general/note/note.component.html
@@ -6,12 +6,17 @@
     <div class="note-content">
       <p class="note-inner-content text-muted">{{note.content}}</p>
     </div>
-    <div class="d-flex align-items-center" style="position: absolute; bottom: 10px; right: 10px;">
-      <button class="mr-1" (click)="updateNote(note.id)"><i class="fa fa-edit edit-note" style="color: black; margin-right: 5px;"></i></button>
-      <button class="mr-1" (click)="deleteNote(note.id)"><i class="fa fa-trash remove-note" style="color: black; margin-right: 5px;"></i></button>
-      <div class="ml-auto"></div>
+    <h5>Categories</h5>
+    <div *ngFor="let category of note.categories">
+    <div style="display: inline-block; border: 1px solid #000; margin: 2px; border-radius: 5px;">
+      <p class="note-inner-content text-muted">{{category.tag}}</p>
     </div>
   </div>
+    <div class="d-flex align-items-center" style="bottom: 10px; right: 10px;">
+      <button class="mr-1" (click)="updateNote(note.id)"><i class="fa fa-edit edit-note" style="color: black; margin-right: 5px;"></i></button>
+      <button class="mr-1" (click)="deleteNote(note.id)"><i class="fa fa-trash remove-note" style="color: black; margin-right: 5px;"></i></button>
+    </div>
+
 </div>
 
 
