Un poco de estilización y fixs

--- a/src/main/frontend/frontend/src/app/app.component.html
+++ b/src/main/frontend/frontend/src/app/app.component.html
@@ -18,7 +18,7 @@
     </button>
   </ul>
   <div class="col-md-4 mb-4">
-        <app-note></app-note>
+        <app-note *ngIf="opened == false"></app-note>
         </div>
       </div>
 </body>
