--- a/src/main/frontend/frontend/src/app/general/add-note/add-note.component.html
+++ b/src/main/frontend/frontend/src/app/general/add-note/add-note.component.html
@@ -20,7 +20,7 @@ transition: filter 0.3s ease-in-out;">
           <div class="col-md-12">
             <div class="note-description" *ngIf="categories.length != 0;" > <!-- va sin los () de función porque es un string, si fuese un array seria .length()-->
               <label>Categorias</label>
-              <textarea class="form-control" placeholder="Categories separated by comma" rows="3" formGroupName="categories" formControlName="tag" >{{categories}}</textarea>
+              <textarea class="form-control" placeholder="Categories separated by comma" rows="3" [formControl]="$any(formData.get('categories.tag'))">{{categories}}</textarea>
             </div>
             <div class="note-description" *ngIf="categories.length == 0;" > <!-- va sin los () de función porque es un string, si fuese un array seria .length()-->
               <label>Categorias</label>
@@ -34,6 +34,6 @@ transition: filter 0.3s ease-in-out;">
   </div>
 <mat-dialog-actions style="display: flex; justify-content: center;">
   <button [mat-dialog-close]="true" class="btn btn-danger">Discard</button>
-  <button class="btn btn-info" type="submit" (click)="onSubmit()" [disabled]="!formData.valid" >Add</button>
+  <button class="btn btn-info" type="submit" (click)="onSubmit()" [disabled]="!formData.valid"> Add</button>
 </mat-dialog-actions>
 </mat-dialog-content>
