--- a/src/main/frontend/frontend/src/app/general/add-note/add-note.component.html
+++ b/src/main/frontend/frontend/src/app/general/add-note/add-note.component.html
@@ -1,7 +1,7 @@
 <mat-dialog-content class="fixed-top" style="margin-top: 200px;
-transition: filter 0.3s ease-in-out;">
-  <h2 mat-dialog-title class="bg-info text-white">Add Notes</h2>
-  <div class="notes-box;" style="display: inline-block;" >
+transition: filter 0.3s ease-in-out;" >
+  <h2 mat-dialog-title class="bg-info text-white" style="text-align: center;">Add Notes</h2>
+  <div class="notes-box;" style="display: flex; justify-content: center;" >
     <div class="notes-content">
       <form [formGroup]="formData">
         <div class="row">
@@ -18,14 +18,13 @@ transition: filter 0.3s ease-in-out;">
             </div>
           </div>
           <div class="col-md-12">
-            <div class="note-description" *ngIf="categories.length != 0;" > <!-- va sin los () de función porque es un string, si fuese un array seria .length()-->
-              <label>Categorias</label>
+            <div class="note-description" *ngIf="categories.length != 0;" >
+              <label>Categories</label>
               <textarea class="form-control" placeholder="Categories separated by comma" rows="3" [formControl]="$any(formData.get('categories.tag'))">{{categories}}</textarea>
             </div>
-            <div class="note-description" *ngIf="categories.length == 0;" > <!-- va sin los () de función porque es un string, si fuese un array seria .length()-->
-              <label>Categorias</label>
-              <textarea class="form-control" placeholder="Categories separated by comma" rows="3" [formControl]="$any(formData.get('categories.tag'))" ></textarea> <!-- el form control me ayuda con el nested form group. Y el any es porque sino se queja
-              el html de que no se qué de los tipos-->
+            <div class="note-description" *ngIf="categories.length == 0;" >
+              <label>Categories</label>
+              <textarea class="form-control" placeholder="Categories separated by comma" rows="3" [formControl]="$any(formData.get('categories.tag'))" ></textarea>
             </div>
           </div>
         </div>
@@ -33,7 +32,7 @@ transition: filter 0.3s ease-in-out;">
     </div>
   </div>
 <mat-dialog-actions style="display: flex; justify-content: center;">
-  <button [mat-dialog-close]="true" class="btn btn-danger">Discard</button>
-  <button class="btn btn-info" type="submit" (click)="onSubmit()" [disabled]="!formData.valid"> Add</button>
+  <button [mat-dialog-close]="true" class="btn btn-danger" style="margin-right: 1rem;">Discard</button>
+  <button class="btn btn-info" type="submit" (click)="onSubmit()" [disabled]="!formData.valid">Add</button>
 </mat-dialog-actions>
 </mat-dialog-content>
